# NashVec

./: .gitignore  CITATION.md  DEPLOY_TO_PYPI.md  INSTALLATION.md  MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
examples/: __init__.py  demo_search.py
nashvec/: __init__.py  autoencoder.py  cli.py  data.py  embedding.py  index.py  search.py  utils.py
tests/: __init__.py  test_autoencoder.py  test_search.py
